<resources>
    <string name="app_name">SportingCenterApp</string>
    <string name="navigation_draw_open">open navigation drawer</string>
    <string name="navigation_draw_close">close navigation drawer</string>
    <string name="fr_home_title">Sporting Center</string>
    <string name="fr_home_firstQuestion_it">Chi siamo?</string>
    <string name="fr_home_firstQuestion_en">About us</string>
    <string name="fr_home_secondQuestion_it">Dove siamo?</string>
    <string name="fr_home_secondQuestion_en">Where we are?</string>
    <string name="fr_home_firstAnswer_it">La SportingCenterApp è un"'"applicazione che permette agli utenti dello Sporting Center di Torino di visualizzare e gestire le differenti attività sportive offerte sulla base del loro abbonamento.</string>
    <string name="fr_home_firstAnswer_en">The SportingCenterApp is an application that allows users of the Sporting Center of Turin to view and manage the different sports activities offered on the basis of their subscription.</string>
    <string name="fr_home_secondAnswer_it">La sede principale è situata a Torino, per altri dettagli su come raggiungerci o contattarci recarsi nella sezione Contatti</string>
    <string name="fr_home_secondAnswer_en">The head office is located in Turin, for more details on how to reach us or contact us go to the Contact section</string>
    <string name="fr_user_pageTitle_it">Profilo</string>
    <string name="fr_user_pageTitle_en">Profile</string>
    <string name="fr_user_informationSectionTitle_it">Informazioni utente:</string>
    <string name="fr_user_informationSectionTitle_en">User information:</string>
    <string name="fr_user_informationSectionButton_it">Modifica</string>
    <string name="fr_user_informationSectionButton_en">Modify</string>
    <string name="fr_user_informationSectionButtonSave_it">Salva</string>
    <string name="fr_user_informationSectionButtonSave_en">Save</string>
    <string name="fr_user_informationSectionTelephoneEdit_it">Aiutaci a contattarti</string>
    <string name="fr_user_informationSectionTelephoneEdit_en">Help us to contact you</string>
    <string name="fr_user_subscriptionSectionTitle_it">Abbonamento: </string>
    <string name="fr_user_subscriptionSectionTitle_en">Subscription: </string>
    <string name="fr_user_subscriptionSectionTipologyText_it">Tipologia: </string>
    <string name="fr_user_subscriptionSectionTipologyText_en">Tipology: </string>
    <string name="fr_user_subscriptionSectionExpiredText_it">Scadenza: </string>
    <string name="fr_user_subscriptionSectionExpiredText_en">Deadline: </string>
    <string name="fr_user_subscriptionSectionCircularProgressText_it">Ingressi rimanenti: </string>
    <string name="fr_user_subscriptionSectionCircularProgressText_en">Remaining inputs: </string>
    <string name="fr_user_physicalSectionTitle_it">Calcola il tuo BMI:</string>
    <string name="fr_user_physicalSectionTitle_en">Calculate your BMI:</string>
    <string name="fr_user_physicalSectionAge_it">Età:</string>
    <string name="fr_user_physicalSectionAge_en">Age:</string>
    <string name="fr_user_physicalSectionHeight_it">Altezza:</string>
    <string name="fr_user_physicalSectionHeight_en">Height:</string>
    <string name="fr_user_physicalSectionWeight_it">Peso:</string>
    <string name="fr_user_physicalSectionWeight_en">Weight:</string>
    <string name="fr_user_physicalSectionBMI">BMI:</string>
    <string name="fr_advertisment_title_it">Avvisi</string>
    <string name="fr_advertisment_title_en">Advertisments</string>
    <string name="fr_advertisment_event1_it">08/03 - Festeggia le donne insieme a noi</string>
    <string name="fr_advertisment_event1_en">08/03 - Celebrate woman with us</string>
    <string name="fr_advertisment_event2_it">04/04 - Pasqua con noi pasquestta con chi vuoi</string>
    <string name="fr_advertisment_event2_en">04/04 - Happy Easter</string>
    <string name="fr_advertisment_event3_it">23/07 - 25 anni di Sporting Center</string>
    <string name="fr_advertisment_event3_en">23/07 - 25 years of Sporting Center</string>
    <string name="fr_advertisment_event4_it">31/10 - Paura di perdere la forma?</string>
    <string name="fr_advertisment_event4_en">31/10 - Scary to lost the fitness?</string>
    <string name="fr_advertisment_event5_it">31/12 - Capodanno in palestra</string>
    <string name="fr_advertisment_event5_en">31/12 - Happy new year with Sporting Center</string>
    <string name="fr_settings_title_it">IMPOSTAZIONI</string>
    <string name="fr_settings_title_en">SETTINGS</string>
    <string name="fr_settings_measure_it">Misura</string>
    <string name="fr_settings_measure_en">Measure</string>
    <string name="fr_settings_unitMeasure1">Kg/Cm:</string>
    <string name="fr_settings_unitMeasure2">Lib/In:</string>
    <string name="fr_settings_language_it">Lingua</string>
    <string name="fr_settings_language_en">Language</string>
    <string name="fr_settings_theme_it">Tema</string>
    <string name="fr_settings_theme_en">Theme</string>
    <string name="fr_settings_version_it">Versione</string>
    <string name="fr_settings_version_en">Version</string>
    <string name="fr_settings_version">1.0.0</string>
    <string-array name="temi">
        <item>Chiaro</item>
        <item>Scuro</item>
    </string-array>
    <string-array name="temi_en">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="lingua">
        <item>Italiano</item>
        <item>Inglese</item>
    </string-array>
    <string-array name="lingua_en">
        <item>Italian</item>
        <item>English</item>
    </string-array>
    <string name="calendar">Calendario</string>
    <string name="calendar_en">Calendar</string>
    <string name="activities">Attività Sportive</string>
    <string name="activities_en">Sports Activities</string>
    <string name="system">Sistema</string>
    <string name="settings">Impostazioni</string>
    <string name="settings_en">Settings</string>
    <string name="FAQ">FAQ</string>
    <string name="FAQ_en">FAQ</string>
    <string name="contacts">Contatti</string>
    <string name="contacts_en">Contacts</string>
    <string name="logout">Esci</string>
    <string name="logout_en">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="fr_contacts_title_it">CONTATTI</string>
    <string name="fr_contacts_title_en">CONTACTS</string>
    <string name="fr_contacts_timetable_it">Orari:</string>
    <string name="fr_contacts_timetable_en">Timetables:</string>
    <string name="fr_contacts_openingTimetable1_it">09:00-20:00 da Lun a Ven</string>
    <string name="fr_contacts_openingTimetable1_en">09:00-20:00 from Mon to Fri</string>
    <string name="fr_contacts_openingTimetable2_it">09:00-12:00 Sab</string>
    <string name="fr_contacts_openingTimetable2_en">09:00-12:00 Sat</string>
    <string name="fr_contacts_addressText_it">Indirizzo:</string>
    <string name="fr_contacts_addressText_en">Address:</string>
    <string name="fr_contacts_addressValue_it">Via Verdi, 10 - 10124 Torino</string>
    <string name="fr_contacts_addressValue_en">Verdi Street, 10 - 10124 Turin</string>
    <string name="fr_contacts_telephoneText_it">Telefono: 080 9372134</string>
    <string name="fr_contacts_telephoneText_en">Telephone: 080 9372134</string>
    <string name="fr_contacts_telephoneValue1">045 6231460</string>
    <string name="fr_contacts_telephoneValue2">+39 3359329644</string>
    <string name="fr_contacts_telephoneValue3">+39 3252249678</string>
    <string name="fr_contacts_emailText">E-mail:</string>
    <string name="fr_contacts_emailValue">sportingCenter@gmail.com</string>
    <string name="fr_contacts_1_it">Inviaci una Mail</string>
    <string name="fr_contacts_1_en">Send us a Mail</string>
    <string name="fr_contacts_2_it">Visita il nostro sito web</string>
    <string name="fr_contacts_2_en">Visit our Web site</string>
    <string name="fr_contacts_3_it">Visita la nostra pagina Facebook</string>
    <string name="fr_contacts_3_en">Visit our Facebook page</string>
    <string name="fr_contacts_4_it">Abbiamo anche un canale YouTube</string>
    <string name="fr_contacts_4_en">We have a YouTube channel too</string>
    <string name="fr_contacts_5_it">Guarda le nostre foto su Instagram</string>
    <string name="fr_contacts_5_en">See our photos on Instagram</string>
    <string name="fr_contacts_6_it">Trovaci</string>
    <string name="fr_contacts_6_en">Find us</string>
    <string name="fr_faq_title">FAQ</string>
    <string name="fr_faq_question1_it">1. Come posso modificare il mio abbonamento?</string>
    <string name="fr_faq_question1_en">1. How can I modify my submission?</string>
    <string name="fr_faq_answer1_it">Per modificare il suo abbonamento è necessario recarsi fisicamente all\'ufficio informazioni dello sportingCenter</string>
    <string name="fr_faq_answer1_en"> To modify your submission you must go to the Sporting center\'s information office</string>
    <string name="fr_faq_question2_it">2. Il rimborso dell\'abbonamento è sempre possibile?</string>
    <string name="fr_faq_question2_en">2. The refund of the submission is always possible? </string>
    <string name="fr_faq_answer2_it"> No, il rimborso non è sempre possibile. Nelle clausole del contratto stipulato con il centro sportivo sono specificate le casistiche di rimborso.\nIn caso di dubbi o perplessità contattare lo SportingCenter con i recapiti nella sezione Contatti</string>
    <string name="fr_faq_answer2_en"> No, the refund isn\'t always possible. In the terms of the Sporting Center\'s contract there are specify the cases for the refund.\nIf you have doubts please contact the center with the information contents in the section Contacts</string>
    <string name="fr_faq_question3_it">3. L\'app non mi permette la prenotazione ad un evento, cosa fare?</string>
    <string name="fr_faq_question3_en">3. The application don\'t allow the submission to an event, what i must do? </string>
    <string name="fr_faq_answer3_it">Controllare nelle informazioni dell\'evento se ci sono ancora posti disponibili, in caso di malfunzionamento dell\'app effettuare un aggiornamento. Se i problemi persistono contattare la segreteria con i recapiti nella sezione Contatti</string>
    <string name="fr_faq_answer3_en">Check in the event information if there are already free places, if there is a malfunction update it. If the problems persist please contact out office with the information in the section Contacts</string>
    <string name="login_button"><u>Login</u></string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="missing_email_message">Per favore inserire una mail valide</string>
    <string name="missing_password_message">Per favore inserire una password valida. Deve contenere minimo 8 caratteri, almeno 1 del alfabeto, 1 numero e 1 carattere speciale</string>
    <string name="missing_confirm_password_message">Per favore conferma la tua password</string>
    <string name="password_not_equal_confirm_password_message">Per favore conferma correttamente la password</string>
    <string name="signup_error">Registrazione non riuscita!</string>
    <string name="signup_success">Riceverai una mail per confermare il tuo Account</string>
    <string name="create_account"><u>Registrati</u></string>
    <string name="help"><u>Aiuto?</u></string>
    <string name="login_error">Autenticazione non riuscita!</string>
    <string name="registration_messagge">Abbiamo bisogno solo di alcuni dati per la registrazione!</string>
    <string name="registration_welcome">Benvenuto/a !</string>
    <string name="join_us_button">Registrati</string>
    <string name="password_confirm">Conferma password</string>
    <string name="user_code">Codice utente (6 cifre)</string>
    <string name="fr_calendarCollection_calendar_it">CALENDARIO</string>
</resources>