<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/contacts_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_primary_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/orange">

            <TextView
                android:id="@+id/contacts_title"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/fr_contacts_title_it"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25dp">
            </TextView>

        </LinearLayout>

        <!-- ORARI -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/contacts_timeTableText"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/fr_contacts_timetable_it"
                android:textColor="@color/orange"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="30dp">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contacts_timeTableTextValue1"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/fr_contacts_openingTimetable1_it"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="15dp">
                </TextView>

                <TextView
                    android:id="@+id/contacts_timeTableTextValue2"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/fr_contacts_openingTimetable2_it"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="15dp">
                </TextView>

            </LinearLayout>

        </LinearLayout>

        <!-- INDIRIZZO -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/contacts_addressText"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/fr_contacts_addressText_it"
                android:textColor="@color/orange"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="30dp">

            </TextView>

            <TextView
                android:id="@+id/contacts_addressValue"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginLeft="25dp"
                android:text="@string/fr_contacts_addressValue_it"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:textSize="15dp">

            </TextView>

        </LinearLayout>

        <!-- TELEFONO -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/contacts_telephoneText"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/fr_contacts_telephoneText_it"
                android:textColor="@color/orange"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="30dp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/contacts_telephoneValue1"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/fr_contacts_telephoneValue1"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="15dp">

                </TextView>

                <TextView
                    android:id="@+id/contacts_telephoneValue2"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop= "5dp"
                    android:text="@string/fr_contacts_telephoneValue2"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:textSize="15dp">

                </TextView>

                <TextView
                    android:id="@+id/contacts_telephoneValue3"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/fr_contacts_telephoneValue3"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:textSize="15dp">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <!-- EMAIL -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/contacts_emailText"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/fr_contacts_emailText"
                android:textColor="@color/orange"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="30dp">

            </TextView>

            <TextView
                android:id="@+id/contacts_emailValue"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_marginLeft="25dp"
                android:textColor="@color/black"
                android:text="@string/fr_contacts_emailValue"
                android:layout_gravity="center_vertical"
                android:textSize="15dp">

            </TextView>

        </LinearLayout>

    </LinearLayout>



</FrameLayout>