<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/faq_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/orange">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/fr_faq_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25dp">
            </TextView>

        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/faq_QuestionText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/orange"
                    android:text="@string/fr_faq_question1_it"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/faq_answerText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/fr_faq_answer1_it"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:visibility="gone">
                </TextView>

                <TextView
                    android:id="@+id/faq_QuestionText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/orange"
                    android:textSize="20dp"
                    android:text="@string/fr_faq_question2_it"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/faq_answerText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/fr_faq_answer2_it"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:visibility="gone">
                </TextView>

                <TextView
                    android:id="@+id/faq_QuestionText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/orange"
                    android:textSize="20dp"
                    android:text="@string/fr_faq_question3_it"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/faq_answerText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:text="@string/fr_faq_answer3_it"
                    android:textStyle="bold"
                    android:visibility="gone">
                </TextView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>