<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/home_generalLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary_color">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/home_mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/background_primary_color">

            <!-- Title -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/logo_small_icon_only"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor ="@color/orange"
                    android:layout_gravity="center"
                    android:textSize="30dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/fr_home_title"/>
            </LinearLayout>

            <!-- first separator -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/orange"
                android:orientation="vertical" />
            <!-- image switcher -->
            <ImageSwitcher
                android:id="@+id/home_imageSwitcher"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:background="@color/white">

                <ImageButton
                    android:id="@+id/home_imagePrevious"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@color/orange"
                    android:layout_gravity="left"
                    android:src="@drawable/ic_baseline_navigate_before_24" />

                <ImageButton
                    android:id="@+id/home_imageFollowing"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@color/orange"
                    android:layout_marginLeft="251dp"
                    android:src="@drawable/ic_baseline_navigate_next_24" />

            </LinearLayout>

            <!-- main body -->
            <TextView
                android:id="@+id/home_firstQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="5dp"
                android:textSize="30dp"
                android:textColor="@color/orange"
                android:text="@string/fr_home_firstQuestion_it" />

            <TextView
                android:id="@+id/home_firstAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:text="@string/fr_home_firstAnswer_it" />

            <TextView
                android:id="@+id/home_secondQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/orange"
                android:textSize="30dp"
                android:text="@string/fr_home_secondQuestion_it" />

            <TextView
                android:id="@+id/home_secondAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:text="@string/fr_home_secondAnswer_it" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>