<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Settings">

    <LinearLayout
        android:id="@+id/setting_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_primary_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/orange">

            <TextView
                android:id="@+id/settings_title"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/fr_settings_title_it"
                android:textSize="25dp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/settings_language"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/fr_settings_language_it"
                android:textColor="@color/orange"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="25dp">

            </TextView>

            <Spinner
                android:id="@+id/settings_spinnerLanguage_it"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical"
                android:background="#DADADA"
                android:entries="@array/lingua" />

            <Spinner
                android:id="@+id/settings_spinnerLanguage_en"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical"
                android:background="#DADADA"
                android:entries="@array/lingua_en"
                android:visibility="gone"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/settings_theme"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/fr_settings_theme_it"
                android:textColor="@color/orange"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="25dp">

            </TextView>

            <Spinner
                android:id="@+id/settings_spinnerTheme_it"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:background="#DADADA"
                android:layout_gravity="center_vertical"
                android:entries="@array/temi"/>

            <Spinner
                android:id="@+id/settings_spinnerTheme_en"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_vertical"
                android:background="#DADADA"
                android:entries="@array/temi_en"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/settings_version"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_gravity="center_vertical"
                android:text="@string/fr_settings_version_it"
                android:textColor="@color/orange"
                android:fontFamily="sans-serif-condensed-light"
                android:textSize="25dp">

            </TextView>

            <TextView
                android:id="@+id/settings_versionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/lightGray"
                android:text="@string/fr_settings_version"
                android:textSize="25dp">

            </TextView>

        </LinearLayout>



    </LinearLayout>



</FrameLayout>